deploy/k8s/base/apps/services.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      name: order-service-pod
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          image: order-service:latest
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
...
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  selector:
    app: order-service
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
...
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-service-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      name: inventory-service-pod
      labels:
        app: inventory-service
    spec:
      containers:
        - name: inventory-service
          image: inventory-service:latest
          ports:
            - containerPort: 50051
          readinessProbe:
            grpc:
              port: 50051
            initialDelaySeconds: 5
            periodSeconds: 10
...
---
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
spec:
  selector:
    app: inventory-service
  ports:
    - name: grpc
      protocol: TCP
      port: 50051
      targetPort: 50051
...
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      name: payment-service-pod
      labels:
        app: payment-service
    spec:
      containers:
        - name: payment-service
          image: payment-service:latest
          ports:
            - containerPort: 50052
          readinessProbe:
            grpc:
              port: 50052
            initialDelaySeconds: 5
            periodSeconds: 10
...
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
spec:
  selector:
    app: payment-service
  ports:
    - name: grpc
      protocol: TCP
      port: 50052
      targetPort: 50052
...
