deploy/k8s/base/apps/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: nginx
spec:
  controllerName: gateway.nginx.org/nginx-gateway-fabric
...
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: rocket-factory-gateway
spec:
  gatewayClassName: nginx
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
...
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rocket-factory-route
spec:
  parentRefs:
    - name: rocket-factory-gateway
  hostnames:
    - "rocket-factory.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: order-service
          port: 80
...
